ingress-nginx/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: guestbook
  name: guestbook-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.abc.xyz #replace this your own domain name!
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
